# A2UI

a2a_agents/go/: README.md  go.mod  go.sum
a2a_agents/go/a2ui/: a2ui.go  a2ui_test.go  schema.go  toolset.go
angular/src/app/: app.config.ts
angular/src/catalog/: audio.ts  button.ts  card.ts  column.ts  datetime-input.ts  default.ts  list.ts  row.ts  slider.ts  surface.ts  tabs.ts  text-field.ts
angular/src/catalog/rendering/: dynamic-component.ts  renderer.ts  types.ts
docs/: index.md
renderers/angular/: package-lock.json  package.json
samples/agent/adk/rizzcharts-go/: README.md  agent.go  catalog.go  executor.go  go.mod  go.sum  main.go  main_test.go  rizzcharts_catalog_definition.json  tools.go
samples/client/angular/: package-lock.json
samples/client/lit/: package-lock.json
samples/personalized_learning/: .env.template  .gitignore  Quickstart.ipynb  README.md  api-server.ts  deploy.py  deploy_hosting.py  index.html  package.json  quickstart_setup.sh  test_topic_matching.py
samples/personalized_learning/agent/: .env.template  Dockerfile  agent.py  openstax_chapters.py  openstax_content.py  openstax_modules.py  pyproject.toml  requirements.txt  server.py
samples/personalized_learning/agent/tests/: test_agent.py  test_caching.py  test_keyword_hints.py  test_parallel_fetch.py
samples/personalized_learning/src/: firebase-auth.ts  main.ts
specification/0.9/docs/: a2ui_protocol.md
specification/0.9/json/: common_types.json  server_to_client.json
specification/v0_9/docs/: a2ui_protocol.md
specification/v0_9/json/: standard_catalog.json
(+8 files in other folders)
